webapp/nginx-counter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-counter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-counter
  template:
    metadata:
      labels:
        app: nginx-counter
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
      - name: nginx-prometheus-exporter
        image: nginx/nginx-prometheus-exporter:latest
        ports:
        - containerPort: 9113
        args:
        - -nginx.scrape-uri=http://192.168.10.201/status  # Thay đổi localhost thành địa chỉ IP của Nginx
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-counter
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-counter
