webapp/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-access-log: "true" # Bật access log
    nginx.ingress.kubernetes.io/prometheus-metrics: "true" # Kích hoạt metrics
spec:
  rules:
  - host: webapp.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              number: 80
